<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Menu items -->
    <string name="functions_menu_item">Functions</string>
    <string name="calculation_history_item">Calculation history</string>
    <string name="settings_menu_item">Settings</string>
    <string name="about_menu_item">About program</string>

    <!-- Descriptions and hints of the expression subpanel items -->
    <string name="angle_unit_description">Angle unit</string>
    <string name="calculation_field_hint">Current expression</string>
    <string name="calculation_result_hint">Calculation result</string>

    <!-- Angle units -->
    <string name="rad">RAD</string>
    <string name="deg">DEG</string>
    <string name="grad">GRAD</string>

    <!-- Main subpanel items -->
    <string name="comma">,</string>
    <string name="power">^</string>
    <string name="log">LOG</string>
    <string name="sqrt">√</string>
    <string name="sqr">X^2</string>
    <string name="factorial">!</string>
    <string name="inversion">INV</string>
    <string name="clear">C</string>
    <string name="parenthesis">()</string>
    <string name="percent">%</string>
    <string name="division">÷</string>
    <string name="multiplication">*</string>
    <string name="subtraction">-</string>
    <string name="addition">+</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <!-- Descriptions of the main subpanel items -->
    <string name="collapse_description">Collapse functions subpanel</string>
    <string name="power_description">Exponentiation operation</string>
    <string name="log_description">Logarithm on an arbitrary basis</string>
    <string name="sqrt_description">Square root</string>
    <string name="sqr_description">Squaring operation</string>
    <string name="factorial_description">Factorial</string>
    <string name="inversion_description">Inversion</string>
    <string name="clear_description">Clearing</string>
    <string name="parentheses_description">Parentheses</string>
    <string name="div_description">Division</string>
    <string name="mul_description">Multiplication</string>
    <string name="sub_description">Subtraction</string>
    <string name="add_description">Addition</string>
    <string name="back_description">Back</string>

    <!-- Functions subpanel items -->
    <string name="sin">SIN</string>
    <string name="cos">COS</string>
    <string name="tan">TAN</string>
    <string name="cot">COT</string>
    <string name="sec">SEC</string>
    <string name="cosec">COSEC</string>
    <string name="asin">ASIN</string>
    <string name="acos">ACOS</string>
    <string name="atan">ATAN</string>
    <string name="acot">ACOT</string>
    <string name="asec">ASEC</string>
    <string name="acosec">ACOSEC</string>
    <string name="sinh">SINH</string>
    <string name="cosh">COSH</string>
    <string name="tanh">TANH</string>
    <string name="coth">COTH</string>
    <string name="sech">SECH</string>
    <string name="csch">CSCH</string>
    <string name="asinh">ASINH</string>
    <string name="acosh">ACOSH</string>
    <string name="atanh">ATANH</string>
    <string name="acoth">ACOTH</string>
    <string name="asech">ASECH</string>
    <string name="acsch">ACSCH</string>
    <string name="ln">LN</string>
    <string name="log2">LOG2</string>
    <string name="lg">LG</string>
    <string name="exp">EXP</string>
    <string name="power_of_2">2^X</string>
    <string name="power_of_10">10^X</string>
    <string name="cbrt">CBRT</string>
    <string name="cube">X^3</string>
    <string name="root">ROOT</string>
    <string name="hypot">HYPOT</string>
    <string name="ceil">CEIL</string>
    <string name="abs">ABS</string>
    <string name="floor">FLOOR</string>
    <string name="round">ROUND</string>
    <string name="fraction">FRACTION</string>
    <string name="pi">π</string>
    <string name="e">e</string>

    <!-- Descriptions of functions and constants -->
    <string name="sin_description">Sine function</string>
    <string name="cos_description">Cosine function</string>
    <string name="tan_description">Tangent function</string>
    <string name="cot_description">Cotangent function</string>
    <string name="sec_description">Secant function</string>
    <string name="cosec_description">Cosecant function</string>
    <string name="asin_description">Arcsine function</string>
    <string name="acos_description">Arccosine function</string>
    <string name="atan_description">Arctangent function</string>
    <string name="acot_description">Arccotangent function</string>
    <string name="asec_description">Arcsecant function</string>
    <string name="acosec_description">Arccosecant function</string>
    <string name="sinh_description">Hyperbolic sine function</string>
    <string name="cosh_description">Hyperbolic cosine function</string>
    <string name="tanh_description">Hyperbolic tangent function</string>
    <string name="coth_description">Hyperbolic cotangent function</string>
    <string name="sech_description">Hyperbolic secant function</string>
    <string name="csch_description">Hyperbolic cosecant function</string>
    <string name="asinh_description">Inverse hyperbolic sine function</string>
    <string name="acosh_description">Inverse hyperbolic cosine function</string>
    <string name="atanh_description">Inverse hyperbolic tangent function</string>
    <string name="acoth_description">Inverse hyperbolic cotangent function</string>
    <string name="asech_description">Inverse hyperbolic secant function</string>
    <string name="acsch_description">Inverse hyperbolic cosecant function</string>
    <string name="ln_description">Natural logarithm function</string>
    <string name="log2_description">Logarithm function with base 2</string>
    <string name="lg_description">Logarithm function with base 10</string>
    <string name="exp_description">Exponent function</string>
    <string name="power_of_2_description">Exponentiation function 2</string>
    <string name="power_of_10_description">Exponentiation function 10</string>
    <string name="cbrt_description">Cube root function</string>
    <string name="cube_description">Cubing operation</string>
    <string name="root_description">Root function with an arbitrary basis</string>
    <string name="hypot_description">Hypotenuse function</string>
    <string name="ceil_description">Ceil function</string>
    <string name="abs_description">Absolute value function</string>
    <string name="floor_description">Floor function</string>
    <string name="round_description">Round function</string>
    <string name="fraction_description">Fraction function</string>
    <string name="pi_description">Pi constant</string>
    <string name="e_description">Euler constant</string>

    <!-- Error and state messages -->
    <string name="in_progress">Calculating expression: %1$s…</string>
    <string name="invalid_expression">Invalid expression</string>
    <string name="division_by_zero">Division by zero</string>
    <string name="invalid_argument">Invalid argument</string>
    <string name="invalid_arguments_number">Invalid number of arguments</string>
    <string name="generic_error">Error</string>
</resources>
