<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="fragment" type="com.sunman.feature.main.ui.MainFragment" />
        <variable name="viewModel" type="com.sunman.feature.main.presentation.MainViewModel" />
    </data>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableRow
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sinButton"
                style="@style/Widget.CalculationPanel.Button.Function"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:contentDescription="@string/sin_description"
                tools:text="@string/sin"
                android:onClick="@{fragment::onAddButtonTextToInputString}" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cosButton"
                style="@style/Widget.CalculationPanel.Button.Function"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:contentDescription="@string/cos_description"
                tools:text="@string/cos"
                android:onClick="@{fragment::onAddButtonTextToInputString}" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/tanButton"
                style="@style/Widget.CalculationPanel.Button.Function"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:contentDescription="@string/tan_description"
                tools:text="@string/tan"
                android:onClick="@{fragment::onAddButtonTextToInputString}" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cotButton"
                style="@style/Widget.CalculationPanel.Button.Function"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:contentDescription="@string/cot_description"
                tools:text="@string/cot"
                android:onClick="@{fragment::onAddButtonTextToInputString}" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculationPanel.Button.Function"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/pi_description"
                android:text="@string/pi"
                android:onClick="@{fragment::onAddButtonTextToInputString}" />
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/lnButton"
                style="@style/Widget.CalculationPanel.Button.Function"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:contentDescription="@string/ln_description"
                tools:text="@string/ln"
                android:onClick="@{fragment::onAddButtonTextToInputString}" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/log2Button"
                style="@style/Widget.CalculationPanel.Button.Function"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:contentDescription="@string/log2_description"
                tools:text="@string/log2"
                android:onClick="@{fragment::onAddButtonTextToInputString}" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/lgButton"
                style="@style/Widget.CalculationPanel.Button.Function"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:contentDescription="@string/lg_description"
                tools:text="@string/lg"
                android:onClick="@{fragment::onAddButtonTextToInputString}" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculationPanel.Button.Function"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/root_description"
                android:text="@string/root"
                android:onClick="@{fragment::onAddButtonTextToInputString}" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculationPanel.Button.Function"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/e_description"
                android:text="@string/e"
                android:onClick="@{fragment::onAddButtonTextToInputString}" />
        </TableRow>
    </TableLayout>
</layout>
