<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="fragment" type="com.sunman.feature.main.ui.MainFragment" />
        <variable name="viewModel" type="com.sunman.feature.main.presentation.MainViewModel" />
    </data>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_padding"
        android:orientation="vertical"
        android:weightSum="6">

        <TableRow
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="5">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculationPanel.Button.Operation"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/comma"
                android:onClick="@{(view) -> fragment.addButtonTextToInputString(view)}" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/powerButton"
                style="@style/Widget.CalculationPanel.Button.Operation"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:contentDescription="@string/power_description"
                tools:text="@string/power"
                android:onClick="@{(view) -> fragment.addButtonTextToInputString(view)}" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sqrtButton"
                style="@style/Widget.CalculationPanel.Button.Operation"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:contentDescription="@string/sqrt_description"
                tools:text="@string/sqrt"
                android:onClick="@{(view) -> fragment.addButtonTextToInputString(view)}" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculationPanel.Button.Operation"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/factorial_description"
                android:text="@string/factorial"
                android:onClick="@{(view) -> fragment.addButtonTextToInputString(view)}" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/inversionButton"
                style="@style/Widget.CalculationPanel.Button.Control"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/inversion_description"
                android:text="@string/inversion"
                android:onClick="@{() -> fragment.changeUsingInverseFunctions()}" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculationPanel.Button.Control"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/clear_description"
                android:text="@string/clear"
                android:onClick="@{() -> viewModel.clearInputString()}" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculationPanel.Button.Operation"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/parentheses_description"
                android:text="@string/parenthesis"
                android:onClick="@{(view) -> fragment.addButtonTextToInputString(view)}" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculationPanel.Button.Operation"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/percent"
                android:onClick="@{(view) -> fragment.addButtonTextToInputString(view)}" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculationPanel.Button.Operation"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/div_description"
                android:text="@string/division"
                android:onClick="@{(view) -> fragment.addButtonTextToInputString(view)}" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculationPanel.Button"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/seven"
                android:onClick="@{(view) -> fragment.addButtonTextToInputString(view)}" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculationPanel.Button"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/eight"
                android:onClick="@{(view) -> fragment.addButtonTextToInputString(view)}" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculationPanel.Button"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/nine"
                android:onClick="@{(view) -> fragment.addButtonTextToInputString(view)}" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculationPanel.Button.Operation"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/mul_description"
                android:text="@string/multiplication"
                android:onClick="@{(view) -> fragment.addButtonTextToInputString(view)}" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculationPanel.Button"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/four"
                android:onClick="@{(view) -> fragment.addButtonTextToInputString(view)}" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculationPanel.Button"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/five"
                android:onClick="@{(view) -> fragment.addButtonTextToInputString(view)}" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculationPanel.Button"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/six"
                android:onClick="@{(view) -> fragment.addButtonTextToInputString(view)}" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculationPanel.Button.Operation"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/sub_description"
                android:text="@string/subtraction"
                android:onClick="@{(view) -> fragment.addButtonTextToInputString(view)}" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculationPanel.Button"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/one"
                android:onClick="@{(view) -> fragment.addButtonTextToInputString(view)}" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculationPanel.Button"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/two"
                android:onClick="@{(view) -> fragment.addButtonTextToInputString(view)}" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculationPanel.Button"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/three"
                android:onClick="@{(view) -> fragment.addButtonTextToInputString(view)}" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculationPanel.Button.Operation"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/add_description"
                android:text="@string/addition"
                android:onClick="@{(view) -> fragment.addButtonTextToInputString(view)}" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculationPanel.Button"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/zero"
                android:onClick="@{(view) -> fragment.addButtonTextToInputString(view)}" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculationPanel.Button"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/dot"
                android:onClick="@{(view) -> fragment.addButtonTextToInputString(view)}" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculationPanel.Button"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/back_description"
                app:icon="@drawable/ic_baseline_backspace_24"
                android:onClick="@{() -> viewModel.removeOneItemFromCalculationString()}" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculationPanel.Button.Operation"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/equal"
                android:onClick="@{() -> viewModel.executeCalculation()}" />
        </TableRow>
    </TableLayout>
</layout>
