<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="fragment" type="com.sunman.feature.main.ui.MainFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/calculation_field_shape"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/layout_padding"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/angleUnitButton"
                style="@style/Widget.CalculationPanel.Button.Control.AngleUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> fragment.onChangeAngleUnit()}"
                tools:text="@string/rad" />

            <TextView
                android:id="@+id/calculationField"
                style="@style/Widget.CalculationPanel.TextView.CalculationField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/calculation_field_hint" />
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            style="@style/Widget.CalculationPanel.MaterialDivider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/layout_padding"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/calculationFieldResult"
                style="@style/Widget.CalculationPanel.TextView.CalculationResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/calculation_result_hint" />
        </LinearLayout>
    </LinearLayout>
</layout>
